--- a/docs/components/equipment/index.html
+++ b/docs/components/equipment/index.html
@@ -42,7 +42,7 @@ Promise.all([
 				rarity: item.rarity,
 				group: data.group,
 				nation: data.nation,
-				image: `./${ key }_t${ item.tier }.png`,
+				image: `${ key }_t${ item.tier }.png`,
 			});
 		}
 	});
