--- a/docs/components/equipment/index.html
+++ b/docs/components/equipment/index.html
@@ -29,6 +29,7 @@ Promise.all([
 		'auxiliary_equipment',
 		'anti_submarine_warfare',
 		'cargo',
+		'missile',
 		'seaplanes',
 	];
 	const GROUP_NAME = {
@@ -46,6 +47,7 @@ Promise.all([
 		auxiliary_equipment: '設備',
 		anti_submarine_warfare: '設備',
 		cargo: '設備',
+		missile: 'その他',
 		seaplanes: 'その他',
 	};
 	const EQUIP_NAME = {
@@ -63,6 +65,7 @@ Promise.all([
 		auxiliary_equipment: '設備',
 		anti_submarine_warfare: '対潜設備',
 		cargo: '運送設備',
+		missile: 'ミサイル',
 		seaplanes: '水上機',
 	};
 	const search = new URLSearchParams(location.search);
